// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Availability should match the snapshot when the path is /edit-availability 1`] = `
<section
  className="Availability"
>
  <h3>
    Please set when you are available to give help to others
  </h3>
  <table
    className="Availability--table"
  >
    <tr>
      <th />
      <th>
        8:00 - 8:50 a.m.
      </th>
      <th>
        12:00 - 12:50 p.m.
      </th>
      <th>
        4:10 - 5:00 p.m.
      </th>
    </tr>
    <tr>
      <td>
        Monday
      </td>
      <td>
        <button
          className="button--false"
          key="0"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="1"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="2"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Tuesday
      </td>
      <td>
        <button
          className="button--false"
          key="3"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="4"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="5"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Wednesday
      </td>
      <td>
        <button
          className="button--false"
          key="6"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="7"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="8"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Thursday
      </td>
      <td>
        <button
          className="button--false"
          key="9"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="10"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="11"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Friday
      </td>
      <td>
        <button
          className="button--false"
          key="12"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="13"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="14"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
  </table>
  <button
    id="edit--button"
    onClick={[Function]}
  >
    Edit Availability
  </button>
  <button
    id="cancel--button"
    onClick={[Function]}
  >
    Cancel
  </button>
</section>
`;

exports[`Availability should match the snapshot when the path is /set-availability 1`] = `
<section
  className="Availability"
>
  <h3>
    Please set when you are available to give help to others
  </h3>
  <table
    className="Availability--table"
  >
    <tr>
      <th />
      <th>
        8:00 - 8:50 a.m.
      </th>
      <th>
        12:00 - 12:50 p.m.
      </th>
      <th>
        4:10 - 5:00 p.m.
      </th>
    </tr>
    <tr>
      <td>
        Monday
      </td>
      <td>
        <button
          className="button--false"
          key="0"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="1"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="2"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Tuesday
      </td>
      <td>
        <button
          className="button--false"
          key="3"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="4"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="5"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Wednesday
      </td>
      <td>
        <button
          className="button--false"
          key="6"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="7"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="8"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Thursday
      </td>
      <td>
        <button
          className="button--false"
          key="9"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="10"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="11"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
    <tr>
      <td>
        Friday
      </td>
      <td>
        <button
          className="button--false"
          key="12"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="13"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
      <td>
        <button
          className="button--false"
          key="14"
          onClick={[Function]}
        >
          unavailable
        </button>
      </td>
    </tr>
  </table>
  <button
    id="set--button"
    onClick={[Function]}
  >
    Set Availability
  </button>
  <button
    id="skip--button"
    onClick={[Function]}
  >
    Skip
  </button>
</section>
`;
